<resources>
    <string name="app_name">Donaciones</string>
    <string name="tokenApp">"com.donation"</string>
    <string name="prompt_email">"Email"</string>
    <string name="prompt_DonationName">"Nombre de Donacion"</string>
    <string name="prompt_DonationDescription">"Descripcion"</string>
    <string name="prompt_password">"Contraseña"</string>
    <string name="prompt_confirm_password">"Confirmar Contraseña"</string>
    <string name="prompt_name">"Nombre"</string>
    <string name="prompt_phone">"Teléfono"</string>
    <string name="prompt_address">"Dirección"</string>
    <string name="action_sign_in">"Ingresar"</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="new_user">"¿No tienes una cuenta? Regístrate aquí"</string>
    <string name="login_google">Iniciar sesión con Google</string>
    <string name="confirm">"Confirmar"</string>
    <string name="btnLogin">"Login"</string>
    <string name="btnDoantion">"Donaciones"</string>
    <string name="btnEdit">Editar Datos</string>
    <string name="txtLogout">Gracias por usar Donaciones.</string>
    <string name="btnLogout">Logout</string>
    <string name="btnAcercade">"Acerca de app"</string>
    <string name="InvalidUser">Existen errores en el formulario</string>
    <string name="EmailNull">Debe ingresar el email</string>
    <string name="WrongEmail">El email no es válido</string>
    <string name="NameNull">Ingrese nombre</string>
    <string name="PasswordNull">Ingrese contraseña</string>
    <string name="AddressNull">Ingrese dirección</string>
    <string name="PhoneNull">Ingrese Teléfono</string>
    <string name="NotEqualPassword">No coinciden  contraseñas</string>
    <string name="WrongLengthPassword">La contraseña debe ser entre 4 y 6 caracteres</string>
    <string name="google_maps_key">AIzaSyD2Yob5pbuOub6CWP2xb1GMwHCJX6wmnsU</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Obligatiorio - ISP </string>
    <string name="nav_header_subtitle">Esteban Clavero - Facundo Aguerre - Enrique Gretter</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="addTags">Agregar tags como favoritas</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_donation">Ver Donaciones</string>
    <string name="menu_tag">Ver tags</string>
    <string name="menu_donationTags">Donaciones con tag favoritas</string>
    <string name="menu_editInfo">Editar datos</string>
    <string name="welcome">"Bienvenid@ a Donaciones! "</string>
    <string name="welcome2">El lugar ideal para ayudar o ser ayudado!</string>
    <string name="menu_event"> Crear Campaña</string>
    <string name="menu_myevents"> Mis Campañas</string>
    <string name="lblVigencia">Vigencia</string>
    <string name="prompt_nameEvent">"Ingrese nombre "</string>
    <string name="promt_descEvent">Ingrese la descripcion</string>
    <string name="DescriptionNull">La descripción no puede ser nula</string>
    <string name="DateNull">La fecha no puede ser nula</string>
    <string name="DateFromNull">La fecha desde no puede ser nula</string>
    <string name="DateUntilNull">La fecha hasta no puede ser nula</string>
    <string name="DateBeforeToday">La fecha no puede ser anterior a hoy</string>
    <string name="DateFormat">La fecha debe ser dd/mm/yyyy</string>
    <string name="DateBeforeFrom">La fecha hasta debe ser mayor a fecha desde</string>
    <string name="EventSuccessCommit">La campaña ha sido creada</string>
    <string name="FormErrors">Hay errores en el formulario</string>
    <string name="EventFailureCommit">No se pudo grabar la campaña</string>
    <string name="menu_viewevent">Ver campañas activas</string>
    <string name="NullCenters">Debe ingresar al menuos un centro</string>
    <string name="SearchNull">No se encontraron datos</string>
    <string name="contributionSuccess">Muchas gracias por donar</string>
    <string name="mailSubject">Ud. tiene una nueva donación!! Campaña:</string>
    <string name="sendMail">Enviado correo</string>
    <string name="contributionFailure">No se pudo confirmar la donación</string>
    <string name="contributionDate">Fecha a entregar</string>
    <string name="calendarTitle">Recordatorio de Donaciones</string>
    <string name="askCalendar">Desea agendar el evento?</string>
    <string name="titleViewEvent">Seleccione la campaña para colaborar</string>
    <string name="txtTitleViewDonation">Seleccione una donación</string>
    <string name="NoActiveEvents">No hay campañas activas</string>
    <string name="NoActiveDonations">No hay donaciones activas</string>
    <string name="selectCenters">Buscar centros</string>
   <string name="geofence_transition_invalid_type">Tipo de georefence no valido</string>
    <string name="channel_name">Canal Donaciones</string>
    <string name="channel_description">Canal de comunicación</string>
    <string name="Notification">Mensaje</string>
    <string name="menu_geofencing">Donaciones cercanas</string>
    <string name="donationSuccess">La donación fue ingresada</string>
    <string name="menuCreateDonation">Crear Donación</string>
    <string name="favouriteTags">Tags favoritas</string>
</resources>