<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".InitialFragment">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/txtEditEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin" />

    <Button
        android:id="@+id/btnDonation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDoantion" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEdit" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogout" />

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAcercade" />

    <Button
        android:id="@+id/btnViewDonations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_donation"/>



    <Button
        android:id="@+id/btnVerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ver menu"/>


</LinearLayout>
