<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerEvent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.donation.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/eventlogo" />

    <EditText
        android:id="@+id/editEventName"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblVigencia"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/txtValidityFrom"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:text="al"
            android:textAlignment="center"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/txtValidityUntil"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:inputType="date" />

    </LinearLayout>


    <EditText
        android:id="@+id/txtEventDescription"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:ems="10"
        android:hint="@string/promt_descEvent"
        android:inputType="textMultiLine" />


    <EditText
        android:id="@+id/txtEventEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnaddCenterEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Agregar Centros" />

    <EditText
        android:id="@+id/txtEventPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_phone"
        android:inputType="phone" />


    <Button
        android:id="@+id/btnEventSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base"
        android:enabled="true"
        android:text="@string/confirm"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.134" />

</LinearLayout>